[package]
name = "mousequake"
description = "Simple tool for auto shaking mouse pointer"
authors = ["Kanchi <dev.kanchi.shimono@gmail.com"]
version = "0.0.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
enigo = "0.5.0"
signal-hook = "0.3.18"
