[package]
name = "mousequake"
version = "0.0.4"
edition = "2024"
authors = ["Kanchi <dev.kanchi.shimono@gmail.com"]
description = "Simple tool for automatically shaking the mouse pointer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
enigo = "0.5.0"
signal-hook = "0.3.18"
